--- a/playbooks/jenkins/main.yml
+++ b/playbooks/jenkins/main.yml
@@ -1,4 +1,4 @@
-- hosts: jenkins
+- hosts: jenkins-master
   become: true
   pre_tasks:
   - name: 'Update dependencies'
@@ -9,4 +9,24 @@
     - { role: install_docker }
     - { role: install_jenkins }
     - { role: config }
-    
+
+- hosts: jenkins-slave
+  become: true
+  pre_tasks:
+  - name: 'Update dependencies'
+    raw: 'apt-get update'
+    changed_when: False
+  roles:
+    - { role: install_tools }
+    - { role: install_docker }
+  post_tasks:
+  - name: Configuring docker-registry
+    lineinfile:
+      path: /etc/docker/daemon.json
+      line: '{"insecure-registries": ["192.168.56.11:5000"]}'
+      create: yes
+      state: present
+  - name: Restart the Docker service
+    service:
+      name: docker
+      state: restarted
